--- a/style.css
+++ b/style.css
@@ -5,10 +5,38 @@
 }
 
 body {
-    background-image: url('./images/snow.jpg');
+    background-image: url('./images/snow.png');
     font-family: 'Poppins', sans-serif;
+    color: white;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin-top: 5rem;
+    align-items: center;
     background-size: cover;
     background-position: center center;
     margin: 0;
+}
+h6 {
+    font-weight: regular;
+    font-size: 2rem;
+    color: white;
+}
+.countdown-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
+.big-text {
+    font-weight: bold;
+    font-size: 6rem;
+    line-height: 1;
+    margin: 1rem 2rem;
+}
+.countdown-el {
+    text-align: center;
+}
+.countdown-el span {
+    font-size: 1.3rem;
 }
